update About me
descrition about me
timeline demo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,25 @@
 /* color */
 /* 1c110a-2b2b2b-fffffc-12355b-d72638 */
 
+/* Color Theme Swatches in Hex 
+.Glowing-All-1-hex { color: #0A1747; }
+.Glowing-All-2-hex { color: #0029FA; }
+.Glowing-All-3-hex { color: #8D07F6; }
+.Glowing-All-4-hex { color: #FFFF05; }
+.Glowing-All-5-hex { color: #D4DBF5; }
 
+Color Theme Swatches in RGBA
+.Glowing-All-1-rgba { color: rgba(10, 23, 71, 1); }
+.Glowing-All-2-rgba { color: rgba(0, 41, 250, 1); }
+.Glowing-All-3-rgba { color: rgba(141, 7, 246, 1); }
+.Glowing-All-4-rgba { color: rgba(255, 255, 5, 1); }
+.Glowing-All-5-rgba { color: rgba(212, 219, 245, 1); } */
 
 
 /* Section of Settings */
 html,body{
     height: 100%;
+    font-family: 'Chonburi', cursive;
 }
 
 .bg-alpha{
@@ -107,10 +120,161 @@ height: 100%;
     width: 100%;
     height: 5px;
     background: rgba(0, 0, 0, 0.5);
-  }
+}
   
-  .progress-bar {
+.progress-bar {
     height: 5px;
     background: #5f4ad3;
     width: 0%;
-  }
+}
+
+#map{
+    height: 300px;
+    width: 100%;
+}
+
+/* Section Navbar */
+#navbar{
+    padding: 25px;
+    width: 0.5s;
+}
+
+/* Section Page-title */
+.page-title{
+    position: relative;
+    display: block;
+    padding-top: 250px;
+    padding-bottom: 100px;
+    color: #fff;
+}
+
+/* Section timeline */
+.timeline{
+    list-style: none;
+    position: relative;
+    padding: 20px 0;
+}
+
+.timeline > li {
+    position: relative;  
+    margin-bottom: 40px; 
+}
+
+.timeline::before {
+    content: " ";
+    position: absolute;
+    width: 2px;
+    background: #5f4ad3;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -1px;
+}
+
+li > .timeline-badge{
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    border: 3px solid #FFFC31;
+    left: 50%;
+    margin-left: -9px;
+    border-radius: 50%;
+    background: #fff;
+    box-shadow: 0 0 0 5px #fff;
+    top: 15px;
+}
+
+li > .timeline-badge::before{
+    content: "";
+    position: absolute;
+    top: 5px;
+    right: 20px;
+    width: 25px;
+    height: 2px;
+    background: #e6e6e6;
+}
+ 
+li.inverted > .timeline-badge::before{
+    right: -32px;
+}
+
+li > .timeline-badge p{ 
+    width: 200px;
+    margin-top: -9px;
+    margin-left: 25px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+li.inverted > .timeline-badge p{
+    float: right;
+    text-align: right;    
+    margin-right: 25px;
+}
+
+li > .timeline-card{
+    position: relative;
+    width: 46%;
+    float: left;
+    text-align: right;
+    padding: 0 10px;
+}
+
+li.inverted > .timeline-card{
+    float: right;
+    text-align: left;
+}
+
+.timeline > li::after{
+    content: "";
+    clear: both;
+    display: block;
+}
+
+.timeline-arrow{
+    width: 100%;
+    text-align: center;
+    bottom: -70px;
+    color: #e6e6e6;
+}
+@media(max-width:768px){
+    .timeline::before,
+    .timeline-badge{
+        left: 0 !important; 
+    }
+    .timeline-badge::before{
+        right: -32px !important;
+    }
+    .timeline-badge p,
+    li.inverted > .timeline-badge p{
+        margin-left: 50px !important;
+        text-align: left;
+        float: left;
+    }
+
+    li > .timeline-card{
+        width:100%;
+        text-align: left;
+        padding: 37px 0 0 85px;
+    }
+
+    .timeline-arrow{
+        text-align: left;
+        left: 32px;
+    }
+}
+
+/* Section Star */
+.star-rating{
+    position: relative;
+    font-size: 2em;
+    color: gold;
+    display: inline-block;
+}
+
+.star-current{
+    position: absolute;
+    top: 0;
+    word-spacing: nowrap;
+    overflow: hidden;
+}
