--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,261 +20,260 @@ Color Theme Swatches in RGBA
 .Glowing-All-4-rgba { color: rgba(255, 255, 5, 1); }
 .Glowing-All-5-rgba { color: rgba(212, 219, 245, 1); } */
 
-
 /* Section of Settings */
-html,body{
-    height: 100%;
-    font-family: 'Chonburi', cursive;
+html,
+body {
+  height: 100%;
+  font-family: "Chonburi", cursive;
 }
 
-.bg-alpha{
-    background: rgba(0, 0, 0, 0.5);
+.bg-alpha {
+  background: rgba(0, 0, 0, 0.5);
 }
-.border-short-bottom{
-    position: relative;
-    padding: 20px 0;
-    margin-bottom: 25px;
+.border-short-bottom {
+  position: relative;
+  padding: 20px 0;
+  margin-bottom: 25px;
 }
-.border-short-bottom::after{
-    position: absolute;
-    content: "";
-    width: 100px;
-    height: 2px;
-    bottom: 0;
-    left: 50%;
-    margin-left: -50px;
-    background: #595959;
-
+.border-short-bottom::after {
+  position: absolute;
+  content: "";
+  width: 100px;
+  height: 2px;
+  bottom: 0;
+  left: 50%;
+  margin-left: -50px;
+  background: #595959;
 }
 
 /* Section Carousel */
-.carousel ,
-.carousel-inner ,
-.carousel-item, 
-.carousel-inner .active{
-    height: 100%;
-} 
-
-.carousel-img{
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-}
-.carousel-caption{
-    top: 40%;
-}
-.blackscreen{
-background: rgba(0, 0,0,0.5);
-height: 100%;
+.carousel,
+.carousel-inner,
+.carousel-item,
+.carousel-inner .active {
+  height: 100%;
 }
 
+.carousel-img {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+}
+.carousel-caption {
+  top: 40%;
+}
+.blackscreen {
+  background: rgba(0, 0, 0, 0.5);
+  height: 100%;
+}
 
 /* Section Blog */
-.warpper-card-img{
-    position: relative;
-    overflow: hidden;
+.warpper-card-img {
+  position: relative;
+  overflow: hidden;
 }
 
-.warpper-card-img::after{
-    content: '';
-    padding-top: 56.25%;
-    display: block;
-    height: 0;
+.warpper-card-img::after {
+  content: "";
+  padding-top: 56.25%;
+  display: block;
+  height: 0;
 }
 .warpper-card-img img {
-    position: absolute;
-    top: 0;
-    transition: 2s;
+  position: absolute;
+  top: 0;
+  transition: 2s;
 }
-.warpper-card-img img:hover{
-    transform: scale(1.2);
+.warpper-card-img img:hover {
+  transform: scale(1.2);
 }
 
 /* Section footer */
 
-.semi-footer{
-    background: #595959;
-    color: #000000;
+.semi-footer {
+  background: #595959;
+  color: #000000;
 }
-.semi-footer a{ 
-    color: #fff;
+.semi-footer a {
+  color: #fff;
 }
 
-.semi-footer h4{
-    color: aquamarine;
-    border-bottom: 1px solid;
-    padding: 20px 0;
+.semi-footer h4 {
+  color: aquamarine;
+  border-bottom: 1px solid;
+  padding: 20px 0;
 }
-.footer{
-    background: #000;
-    color: #fff;
-    font-size: 0.7rem;
-    height: 90px;
-    line-height: 90px;
-    text-align: center;
+.footer {
+  background: #000;
+  color: #fff;
+  font-size: 0.7rem;
+  height: 90px;
+  line-height: 90px;
+  text-align: center;
 }
 
 /* Section Progress bar */
 .progress-container {
-    width: 100%;
-    height: 5px;
-    background: rgba(0, 0, 0, 0.5);
-}
-  
-.progress-bar {
-    height: 5px;
-    background: #5f4ad3;
-    width: 0%;
+  width: 100%;
+  height: 5px;
+  background: rgba(0, 0, 0, 0.5);
 }
 
-#map{
-    height: 300px;
-    width: 100%;
+.progress-bar {
+  height: 5px;
+  background: #5f4ad3;
+  width: 0%;
+}
+
+#map {
+  height: 300px;
+  width: 100%;
 }
 
 /* Section Navbar */
-#navbar{
-    padding: 25px;
-    width: 0.5s;
+#navbar {
+  padding: 25px;
+  width: 0.5s;
 }
 
 /* Section Page-title */
-.page-title{
-    position: relative;
-    display: block;
-    padding-top: 250px;
-    padding-bottom: 100px;
-    color: #fff;
+.page-title {
+  position: relative;
+  display: block;
+  padding-top: 250px;
+  padding-bottom: 100px;
+  color: #fff;
 }
 
 /* Section timeline */
-.timeline{
-    list-style: none;
-    position: relative;
-    padding: 20px 0;
+.timeline {
+  list-style: none;
+  position: relative;
+  padding: 20px 0;
 }
 
 .timeline > li {
-    position: relative;  
-    margin-bottom: 40px; 
+  position: relative;
+  margin-bottom: 40px;
 }
 
 .timeline::before {
-    content: " ";
-    position: absolute;
-    width: 2px;
-    background: #5f4ad3;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -1px;
+  content: " ";
+  position: absolute;
+  width: 2px;
+  background: #5f4ad3;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -1px;
 }
 
-li > .timeline-badge{
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    border: 3px solid #FFFC31;
-    left: 50%;
-    margin-left: -9px;
-    border-radius: 50%;
-    background: #fff;
-    box-shadow: 0 0 0 5px #fff;
-    top: 15px;
+li > .timeline-badge {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  border: 3px solid #fffc31;
+  left: 50%;
+  margin-left: -9px;
+  border-radius: 50%;
+  background: #fff;
+  box-shadow: 0 0 0 5px #fff;
+  top: 15px;
 }
 
-li > .timeline-badge::before{
-    content: "";
-    position: absolute;
-    top: 5px;
-    right: 20px;
-    width: 25px;
-    height: 2px;
-    background: #e6e6e6;
-}
- 
-li.inverted > .timeline-badge::before{
-    right: -32px;
+li > .timeline-badge::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  right: 20px;
+  width: 25px;
+  height: 2px;
+  background: #e6e6e6;
 }
 
-li > .timeline-badge p{ 
-    width: 200px;
-    margin-top: -9px;
-    margin-left: 25px;
-    font-size: 18px;
-    font-weight: bold;
+li.inverted > .timeline-badge::before {
+  right: -32px;
 }
 
-li.inverted > .timeline-badge p{
-    float: right;
-    text-align: right;    
-    margin-right: 25px;
+li > .timeline-badge p {
+  width: 200px;
+  margin-top: -9px;
+  margin-left: 25px;
+  font-size: 18px;
+  font-weight: bold;
 }
 
-li > .timeline-card{
-    position: relative;
-    width: 46%;
-    float: left;
-    text-align: right;
-    padding: 0 10px;
+li.inverted > .timeline-badge p {
+  float: right;
+  text-align: right;
+  margin-right: 25px;
 }
 
-li.inverted > .timeline-card{
-    float: right;
+li > .timeline-card {
+  position: relative;
+  width: 46%;
+  float: left;
+  text-align: right;
+  padding: 0 10px;
+}
+
+li.inverted > .timeline-card {
+  float: right;
+  text-align: left;
+}
+
+.timeline > li::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
+.timeline-arrow {
+  width: 100%;
+  text-align: center;
+  bottom: -70px;
+  color: #e6e6e6;
+}
+@media (max-width: 768px) {
+  .timeline::before,
+  .timeline-badge {
+    left: 0 !important;
+  }
+  .timeline-badge::before {
+    right: -32px !important;
+  }
+  .timeline-badge p,
+  li.inverted > .timeline-badge p {
+    margin-left: 50px !important;
     text-align: left;
-}
+    float: left;
+  }
 
-.timeline > li::after{
-    content: "";
-    clear: both;
-    display: block;
-}
-
-.timeline-arrow{
+  li > .timeline-card {
     width: 100%;
-    text-align: center;
-    bottom: -70px;
-    color: #e6e6e6;
-}
-@media(max-width:768px){
-    .timeline::before,
-    .timeline-badge{
-        left: 0 !important; 
-    }
-    .timeline-badge::before{
-        right: -32px !important;
-    }
-    .timeline-badge p,
-    li.inverted > .timeline-badge p{
-        margin-left: 50px !important;
-        text-align: left;
-        float: left;
-    }
+    text-align: left;
+    padding: 37px 0 0 85px;
+  }
 
-    li > .timeline-card{
-        width:100%;
-        text-align: left;
-        padding: 37px 0 0 85px;
-    }
-
-    .timeline-arrow{
-        text-align: left;
-        left: 32px;
-    }
+  .timeline-arrow {
+    text-align: left;
+    left: 32px;
+  }
 }
 
 /* Section Star */
-.star-rating{
-    position: relative;
-    font-size: 2em;
-    color: gold;
-    display: inline-block;
+/* ☆★ */
+.star-rating {
+  position: relative;
+  font-size: 2em;
+  color: gold;
+  display: inline-block;
 }
 
-.star-current{
-    position: absolute;
-    top: 0;
-    word-spacing: nowrap;
-    overflow: hidden;
+.star-current {
+  position: absolute;
+  top: 0;
+  white-space: nowrap;
+  overflow: hidden;
 }
