--- a/components/bs4.html
+++ b/components/bs4.html
@@ -11,7 +11,7 @@
 
     <title>Boostrap</title>
 
-    <!-- การเรียนใช้ค่าของแต่ละสี  -->
+    <!-- color  -->
     <div class="container my-5">
         <h1> Bootstrap4 Color</h1>
         <hr>
